# display

./: .gitignore  README.md  original_v2.py  pylintrc  pyproject.toml  requirements.txt  sbatushe_advanced.py  sbatushe_numpy.py  sbatushe_simple.py
clock/: Canvas.py  CanvasController.py  ClockController.py  DisplayController.py  canvas.py  clock.py  dashboard.py  display.py  main.py  requirements.txt  web.py
clock/docs/: dependencies.dot
clock/html/: index.html
clock/lib/: epd7in5_CYL.py  epd7in5_Sabato.py  epd7in5_V2.py  epdconfig.py
clock/system/: display.service
docs/: basics.md  dev.md
lib/waveshare_epd/: epd7in5_V2_Sbatushe.py
src/dashboard.egg-info/: PKG-INFO  SOURCES.txt
src/display/: canvas.py  clock.py  dashboard.py  epd_cyl.py  epd_orig.py  epdconfig.py  requirements.txt  runner.py  screen.py  tv.py  web.py
src/display/public/: index.html
src/display/public/css/: style.css
src/display/templates/: index.html
system/: display.service  example.env  install-raspbian.sh
test/: .gitignore  display.py
test/lib/: epd7in5_CYL.py
tests/: conftest.py  test_canvas.py  test_clock.py  test_driver.py  test_screen.py  test_tv.py
