[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[project]
name = "dashboard"
version = "0.0.1"
authors = [
  { name="Cylindric", email="mark@hanfordonline.co.uk" },
]
description = "An experiment in a python-based e-Ink display"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cylindric/display"
"Bug Tracker" = "https://github.com/cylindric/display/issues"